fix: form z-index, stepper function for card inputs

--- a/museum/styles/styles.scss
+++ b/museum/styles/styles.scss
@@ -813,6 +813,7 @@ header{
 
     &-modal{
         position: fixed;
+        z-index: 8;
         top:0;
         // left:0;
         left:-100%;
@@ -1128,7 +1129,7 @@ header{
                 margin-bottom: 55px;
                 &-face{
                     position: relative;
-                    z-index: 2;
+                    z-index: 10;
                     width: 360px;
                     height: 211px;
                     padding: 10px 20px;
@@ -1189,11 +1190,11 @@ header{
                                 .up-btn, .down-btn{
                                     position: absolute;
                                     right:11px;
-                                    z-index: 2;
+                                    z-index: 10;
                                     content: '';
                                     display: block;
                                     width: 28px;
-                                    height: 18px;
+                                    height: 16px;
                                     border:none;
                                     border-left: 0.5px solid #A4A4A3;
                                     background-color: var(--white-text);
@@ -1202,7 +1203,7 @@ header{
                                     transition: background-color 0.3s;
                                 }
                                 .up-btn{
-                                    top: 6px;
+                                    top: 7px;
                                     background-image: url("../assets/svg/card-arrow-up.svg");
                                     }
                                 .down-btn{
@@ -1222,7 +1223,7 @@ header{
                 }
                 &-cvv{
                     position: absolute;
-                    z-index: 1;
+                    z-index: 9;
                     top:30px;
                     left:110px;
                     display: flex;
@@ -1292,7 +1293,7 @@ header{
             }
             .ripple {
                 position: absolute;
-                z-index: 10;
+                z-index: 12;
                 border-radius: 50%;
                 transform: scale(0);
                 animation: ripple 0.4s linear;
